<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_primary"
        android:paddingEnd="16dp"
        tools:ignore="RtlSymmetry">

        <!-- Toolbar với nút "Tạo thư mục" -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_primary"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="@color/text_primary"
            app:title="@string/create_folder"
            app:titleTextColor="@color/text_primary"
            app:menu="@menu/menu_create_folder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Ô nhập tiêu đề -->
        <com.kardio.ui.components.inputs.QlzTextField
            android:id="@+id/text_field_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            app:qlzHint="@string/folder_name_hint"
            app:qlzIcon="@drawable/ic_folder_outline"
            app:qlzLabel="@string/folder_name_label"
            app:qlzRequired="true"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>